--- a/jiu-jitsu.html
+++ b/jiu-jitsu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jiu-Jitsu - El Arte Suave | Fight Gear Pro</title>
+    <title>Jiu-Jitsu - El Arte Suave | KnockOut</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -15,8 +15,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid px-4">
             <a class="navbar-brand" href="index.html">
-                <span class="brand-text">FIGHT GEAR</span>
-                <span class="brand-sub">PRO</span>
+                <span class="brand-text">KnockOut</span>
+              
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4">
-                    <h3 class="brand-text mb-3">FIGHT GEAR PRO</h3>
+                    <h3 class="brand-text mb-3">KnockOut</h3>
                     <p class="footer-copy">Equipamiento profesional para todas las disciplinas de combate.</p>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                                 <span class="product-category">${p.category}</span>
                                 <h4 class="product-title">${p.name}</h4>
                                 <p class="footer-copy">${p.description}</p>
-                                <div class="product-price">$${p.price}</div>
+                                <div class="product-price">$${p.price} MXN</div>
                                 <button class="btn-add-cart" onclick="cart.addItem(${JSON.stringify(p).replace(/"/g, '&quot;')})">
                                     <i class="fas fa-shopping-cart"></i> Agregar al Carrito
                                 </button>
