--- a/karate.html
+++ b/karate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karate - Equipamiento Profesional | Fight Gear Pro</title>
+    <title>Karate - Equipamiento Profesional | KnockOut</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -25,8 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid px-4">
             <a class="navbar-brand" href="index.html">
-                <span class="brand-text">FIGHT GEAR</span>
-                <span class="brand-sub">PRO</span>
+                <span class="brand-text">knockout</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -216,7 +215,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4">
-                    <h3 class="brand-text mb-3">FIGHT GEAR PRO</h3>
+                    <h3 class="brand-text mb-3">knockout</h3>
                     <p class="footer-copy">Equipamiento profesional para todas las disciplinas de combate.</p>
                 </div>
                 <div class="col-lg-2 col-md-4 mb-4">
@@ -250,7 +249,7 @@
             </div>
             <hr class="my-4">
             <div class="text-center footer-copy">
-                <p>&copy; 2025 Fight Gear Pro. Todos los derechos reservados.</p>
+                <p>&copy; 2025 KnockOut. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
